--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -1,9 +1,10 @@
 h1 {
 font-family: "Raleway", sans-serif;
 font-weight: 400;
-color: #0D2C40;
+color: white;
 letter-spacing: 1px;
 font-size: 45px;
+margin: 0;
 }
 
 p {
@@ -31,4 +32,82 @@ font-size: 20px;
 
 body {
 text-align: center;
+margin: 0;
+}
+header{
+	background-color: #F15B31;
+	color: #FFFFFF;
+	padding: 30px 30px 20px 20px ;
+
+}
+
+nav{
+	background-color: #00A6B3;
+	color: #FFFFFF;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	border-bottom: 2px solid transparent;
+
+}
+main{
+	width: 850px;
+	margin-top: 35px;
+	margin-bottom: 35px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+a{
+	margin-right: 20px;
+	margin-left: 20px;
+	color: #FFFFFF;
+}
+
+main{
+	width: 850px;
+	margin-top: 35px;
+	margin-bottom: 35px;
+	margin-left: auto;
+	margin-right: auto;
+}
+img{
+	margin-top: 40px;
+	margin-right: 8px;
+
+}
+
+footer{
+	text-transform: uppercase;
+	padding-right: 20px;
+	padding-left: 20px;
+	background-color: #0D2C40;
+	color: white;
+	font-size: 14px;
+	letter-spacing: .08em;
+	font-weight: 500;
+
+}
+.copyright{
+	float: left;
+	font-family: Raleway;
+}
+.message{
+	float: right;
+	font-family: Raleway;
+}
+.clearfix:after {
+visibility: hidden;
+display: block;
+content: " ";
+clear: both;
+height: 0;
+font-size: 0;
+}
+.name{
+	color: #F15B31;
+	font-weight: 700;
+}
+
+a:hover{
+	border-color: white;
 }
